--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body {
   text-align: center;
   margin: 0;
   padding: 0;
+  background-color: #2c3e50;
 }
 
 h1 {
@@ -15,25 +16,32 @@ h1 {
 }
 h2 {
   font-family: "Raleway", sans-serif;
-  color: #0d2c40;
+  /* color: #0d2c40; */
+  color: #fff;
   font-size: 20px;
   font-weight: 600;
   letter-spacing: 1px;
 }
 
 p {
-  color: #0d2c40;
+  /* color: #0d2c40; */
+  color: #fff;
   font-size: 18px;
   line-height: 26px;
 }
 a {
+  transition: 250ms ease-out;
   font-family: "Droid Serif", serif;
-  /* color: #f15b31; */
   color: #ffffff;
   letter-spacing: 1px;
   font-weight: 600;
   font-size: 18px;
   text-decoration: none;
+  display: block;
+  width: 100%;
+}
+a:hover {
+  color: #a8a8a8;
 }
 
 header {
@@ -42,9 +50,11 @@ header {
 }
 
 nav {
-  background-color: #00a6b3;
+  background-color: #9b59b6;
   padding: 20px;
-  color: #ffffff;
+  /* color: #; */
+  display: flex;
+  justify-content: space-around;
 }
 main {
   width: 850px;
@@ -62,4 +72,11 @@ footer {
   color: #ffffff;
   font-size: 14px;
   font-weight: 500;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+h3 {
+  color: #f15b31;
 }
